--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 	<title>Index</title>
 </head>
 <body>
-    <a href="/stocks">Stocks</a> 
+    <a href="/stocks">Stocks</a><br>
     <a href="/recommendations">Recommendations</a> 
 </body>
 </html>
