--- a/templates/stocks.html
+++ b/templates/stocks.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Index</title>
+	<title>Stock Prices</title>
 </head>
 <body>
-    <a href="/recommendations">Recommendations</a> 
+    <h2>Paypal: {{paypal}}</h2>
 </body>
 </html>
