--- a/templates/stocks.html
+++ b/templates/stocks.html
@@ -4,15 +4,15 @@
 	<title>Stock Prices</title>
 </head>
 <body>
-    <h2>Paypal: {{pypl}}</h2>
-    <h2>Nvidia: {{nvda}}</h2>
-    <h2>Disney: {{dis}}</h2>
-    <h2>Ulta: {{ulta}}</h2>
-    <h2>Victoria's Secret: {{vsco}}</h2>
-    <h2>Target: {{tgt}}</h2>
-    <h2>Dollar General: {{dg}}</h2>
-    <h2>CVS: {{cvs}}</h2>
-    <h2>RTX: {{rtx}}</h2>
-    <h2>General Electric: {{ge}}</h2>
+    <h2>Paypal: ${{pypl}}</h2>
+    <h2>Nvidia: ${{nvda}}</h2>
+    <h2>Disney: ${{dis}}</h2>
+    <h2>Ulta: ${{ulta}}</h2>
+    <h2>Victoria's Secret: ${{vsco}}</h2>
+    <h2>Target: ${{tgt}}</h2>
+    <h2>Dollar General: ${{dg}}</h2>
+    <h2>CVS: ${{cvs}}</h2>
+    <h2>RTX: ${{rtx}}</h2>
+    <h2>General Electric: ${{ge}}</h2>
 </body>
 </html>
